feat(17,344,256,189): 優先順位づけにより微増
mosesがめっちゃいいところまできた

諦め

feat(17,344,256,189): 優先順位づけにより微増

--- a/ahc/033/solver/Cargo.toml
+++ b/ahc/033/solver/Cargo.toml
@@ -4,8 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+itertools = "0.13.0"
 proconio = "0.4.5"
-
-[[bin]]
-name = "two_cranes"
-path = "src/bin/two_cranes.rs"
