--- a/templates/solver-interactive/Cargo.toml
+++ b/templates/solver-interactive/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
+ac-library-rs = "0.1.1"
+itertools = "0.13.0"
 proconio = "0.5.0"
 rand = "0.8.5"
+rand_pcg = "0.3.1"
 
 [build-dependencies]
 rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler" }
