--- a/templates/solver/Cargo.toml
+++ b/templates/solver/Cargo.toml
@@ -10,6 +10,7 @@ itertools = "0.13.0"
 proconio = "0.5.0"
 rand = "0.8.5"
 rand_pcg = "0.3.1"
+rustc-hash = "2.0.0"
 
 [build-dependencies]
 rustsourcebundler = { git = "https://github.com/sor4chi/rust-sourcebundler" }
