--- a/templates/solver/Cargo.toml
+++ b/templates/solver/Cargo.toml
@@ -6,6 +6,7 @@ build = "build.rs"
 
 [dependencies]
 ac-library-rs = "0.1.1"
+fixedbitset = "0.5.7"
 itertools = "0.13.0"
 proconio = "0.5.0"
 rand = "0.8.5"
