--- a/libs/Cargo.toml
+++ b/libs/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "on-tree-beam-search"
+name = "libs"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+fixedbitset = "0.5.7"
 rustc-hash = "2.0.0"
