--- a/ahc/038/solver/Cargo.toml
+++ b/ahc/038/solver/Cargo.toml
@@ -10,6 +10,7 @@ fixedbitset = "0.5.7"
 itertools = "0.13.0"
 proconio = "0.5.0"
 rand = "0.8.5"
+rand_chacha = "0.3.1"
 rand_pcg = "0.3.1"
 rustc-hash = "2.0.0"
 
