--- a/ahc/040/solver/Cargo.toml
+++ b/ahc/040/solver/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 ac-library-rs = "0.1.1"
 fixedbitset = "0.5.7"
 itertools = "0.13.0"
+nalgebra = "0.33.2"
 proconio = "0.5.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
